Fixed CSS Alignment

--- a/frontend/packages/topology/src/components/list-view/TopologyListView.scss
+++ b/frontend/packages/topology/src/components/list-view/TopologyListView.scss
@@ -25,6 +25,10 @@
     }
   }
 
+  .pf-c-data-list {
+    --pf-c-data-list__item-row--PaddingLeft: calc(var(--pf-c-data-list__item-row--xl--PaddingLeft) - var(--pf-global--spacer--sm));
+  }
+
   &__sidebar {
     background-color: var(--pf-global--BackgroundColor--100);
     bottom: 0;
